--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="Main_Container">
       <div class="Weather__HeaderPart">
-        <form action="" class="Weather__SearchPart">
+        <form class="Weather__SearchPart">
           <input
             type="text"
             placeholder="Search for a city"
@@ -25,20 +25,17 @@
         </div>
       </div>
       <div class="Weather__Body">
-        <h1 class="Weather__City">Pretoria, SA</h1>
+        <h1 class="Weather__City"></h1>
         <div class="Weather__DateTime">
-            <p>Friday 21 July 2023, 15:33 PM</p>
+            <p></p>
         </div>
         <div class="Weather__Forecast">
-            <p>Clear</p>
         </div>
         <div class="Weather__Icon">
             <img src="http://openweathermap.org/img/wn/10d@4x.png" alt="" />
         </div>  
         <p class="Weather__Temp">18&#176</p>
         <div class="Weather__MinMax">
-            <p>Min: 12&#176</p>
-            <p>Max: 16&#176</p>
         </div>  
       </div>
 
@@ -47,28 +44,28 @@
             <i class="fa-solid fa-temperature-full"></i>
             <div>
             <p>Feels Like</p>
-            <p class="Weather__RealFeel">18&#176</p>
+            <p class="Weather__RealFeel"></p>
             </div>
         </div>
         <div class="Weather__Card">
             <i class="fa-solid fa-droplet"></i>
             <div>
             <p>Humidity</p>
-            <p class="Weather__Humidity">18&#176</p>
+            <p class="Weather__Humidity"></p>
             </div>
         </div>
         <div class="Weather__Card">
             <i class="fa-solid fa-wind"></i>
             <div>
             <p>Wind</p>
-            <p class="Weather__Wind">18&#176</p>
+            <p class="Weather__Wind"></p>
             </div>
         </div>
         <div class="Weather__Card">
             <i class="fa-solid fa-gauge-high"></i>
             <div>
             <p>Pressure</p>
-            <p class="Weather__Pressure">18&#176</p>
+            <p class="Weather__Pressure"></p>
             </div>
         </div>
       </div>
