More changes have been made.

--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,9 @@
             placeholder="Search for a city"
             class="Weather__SearchForm"
           />
-          <i class="fa-solid fa-magnifying-glass"></i>
+          <button type="submit" class="Weather__SearchButton" aria-label="Search">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>          
         </form>
         <div class="Weather__Units">
             <span class="Weather__Unit_Celcius">&#176C</span>
